--- a/Coding for juniors official/about.html
+++ b/Coding for juniors official/about.html
@@ -489,7 +489,7 @@
             <label for="exampleFormControlTextarea1">Message</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
           </div>
-          <button type="button" class="btn btn-primary " id="enroll_now_button">Submit
+          <button type="button" class="btn btn-primary " id="form_submit_btn">Submit
           </button>
         </form>
 
