--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -59,8 +59,7 @@
         </div> -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About Us</a>
@@ -315,88 +314,97 @@
 
     <!-- ======================= WHY CHOOSE HTML ======================= -->
 
-    <section class="why_choose_us">
 
-        <h1 class="centre-size" id="why_choose_us_h">Why choose Us</h1>
 
-        <p class="why_choose_us_p">A Choice that makes a big difference in your career. Coding for juniors is
-            committed to helping its students to reach their goals and their learning experiences, by providing the
-            innovative surroundings and faculties</p>
 
-        <div class="why_choose_us_block">
-            <div class="why_choose_us_box">
+    <!--===================  Row 1 HTML ===================== -->
+    <div class="container" ">
 
-                <div class="why_choose_us_content">
+                <h1 class=" centre-size" id="why_choose_us_h">Why choose Us</h1>
 
-                    <img src="images/c_icon.png" alt="Our Services" class="food-logo">
-                    <h3 class="centre-size">Learn From The Experts</h3>
-                    <p class="centre-text">Learning a technology with a professional who is well expertise to solve
-                        all of your queries</p>
+        <blockquote class="blockquote" id="why_choose_us_p">
+            <p class="mb-0">A Choice that makes a big difference in your career. Coding for juniors is
+                committed to helping its students to reach their goals and their learning experiences, by providing the
+                innovative surroundings and faculties.</p>
+        </blockquote>
+
+        <div class="row">
+            <div class="col align-self-start">
+                <div class="card text-center" id="why_choose_us_box">
+                    <div class="card-body">
+                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <h5 class="card-title">Learn From The Experts</h5>
+                        <p class="card-text">Learning a technology with a professional who is well expertise to solve
+                            all of your queries</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col align-self-end" id="third_row">
+                <div class="card text-center" id="why_choose_us_box">
+                    <div class="card-body">
+                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <h5 class="card-title">Affordable Fees</h5>
+                        <p class="card-text">Providing all the courses at an huge disco Providing all the courses at
+                            an huge disco</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="why_choose_us_box">
-
-                <div class="why_choose_us_content">
-
-                    <img src="images/c_icon.png" alt="Our Services" class="food-logo">
-                    <h3 class="centre-size">Best Course Materials</h3>
-                    <p class="centre-text">Course contents are designed by our industry experts with upto date
-                        market trending technologies.</p>
+            <div class="col align-self-center" id="second_row">
+                <div class="card text-center" id="why_choose_us_box">
+                    <div class="card-body">
+                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <h5 class="card-title">Best Course Materials</h5>
+                        <p class="card-text">Course contents are designed by our industry experts with upto date
+                            market trending technologies.</p>
+                    </div>
                 </div>
             </div>
-
-            <div class="why_choose_us_box">
-
-                <div class="why_choose_us_content">
-
-                    <img src="images/c_icon.png" alt="Our Services" class="food-logo">
-                    <h3 class="centre-size">Affordable Fees</h3>
-                    <p class="centre-text">Providing all the courses at an huge disco Providing all the courses at
-                        an huge disco</p>
-                </div>
-            </div>
-
         </div>
-        <div class="why_choose_us_block">
-            <div class="why_choose_us_box">
 
-                <div class="why_choose_us_content">
 
-                    <img src="images/c_icon.png" alt="Our Services" class="food-logo">
-                    <h3 class="centre-size">Lab Support</h3>
-                    <p class="centre-text">For any software assistance we are here to back you up even after course
-                        completion</p>
+
+        <!--===================  Row 2 HTML ===================== -->
+
+        <div class="row">
+            <div class="col align-self-start">
+                <div class="card text-center" id="why_choose_us_box">
+                    <div class="card-body">
+                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <h5 class="card-title">Learn From The Experts</h5>
+                        <p class="card-text">Learning a technology with a professional who is well expertise to solve
+                            all of your queries</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col align-self-end" id="third_row">
+                <div class="card text-center" id="why_choose_us_box">
+                    <div class="card-body">
+                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <h5 class="card-title">Affordable Fees</h5>
+                        <p class="card-text">Providing all the courses at an huge disco Providing all the courses at
+                            an huge disco</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="why_choose_us_box">
-
-                <div class="why_choose_us_content">
-
-                    <img src="images/c_icon.png" alt="Our Services" class="food-logo">
-                    <h3 class="centre-size">Fully Hands-on Training</h3>
-                    <p class="centre-text">Hands-on online and classroom training sessions .We support any training
-                        with more practical classes.</p>
+            <div class="col align-self-center" id="second_row">
+                <div class="card text-center" id="why_choose_us_box">
+                    <div class="card-body">
+                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <h5 class="card-title">Best Course Materials</h5>
+                        <p class="card-text">Course contents are designed by our industry experts with upto date
+                            market trending technologies.</p>
+                    </div>
                 </div>
             </div>
-
-            <div class="why_choose_us_box">
-
-                <div class="why_choose_us_content">
-
-                    <img src="images/c_icon.png" alt="Our Services" class="food-logo">
-                    <h3 class="centre-size">Flexible Timings</h3>
-                    <p class="centre-text">Flexible timings will be provided as per individual.Learn from Softcolabs
-                        by sitting at your home, office or just anywhere.</p>
-                </div>
-            </div>
-
         </div>
-    </section>
 
-
-
+    </div>
 
     <!-- =======================Some Highlights HTML ======================= -->
 
@@ -439,17 +447,7 @@
                         experience beforehand is required.</p>
                 </div>
             </div>
-            <div id="heighlights">
-                <div class="span_arrow"><span> &#9997</span></div>
-                <div>
-                    <p class="some_heighlights_para"> If you are a motivated parent and passionate about technology
-                        and where it can lead you to, then Join now. If you or your child
-                        would like to find out more about the opportunities provided by our coding programs, explore
-                        the kids programming
-                        courses offered by WhiteHat Jr. and consider enrolling for a free trial. Remember, no coding
-                        experience beforehand is required.</p>
-                </div>
-            </div>
+
 
         </div>
 
@@ -666,40 +664,6 @@
                 Now</button> </a>
     </section>
     <hr>
-
-
-
-    <!-- ======================= CONTACT US HTML =======================-->
-
-    <!-- <section id="contact-form">
-        <h1 class="centre-size" id="contact-form-h">Contact Us </h1>
-        <div class="contact-form-box">
-            <form action="" class="own_form">
-                <div class="form-group">
-                    <label for="Name">Name:</label>
-                    <input type="text" class="name" placeholder="Full Name">
-                </div>
-                <div class="form-group">
-                    <label for="Name">Email:</label>
-                    <input type="email" class="name" placeholder="Email Address">
-                </div>
-                <div class="form-group">
-                    <label for="Name">Phone:</label>
-                    <input type="phone" class="name" placeholder="Phone Number">
-                </div>
-                <div class="form-group">
-                    <label for="Name">Address:</label>
-                    <input type="text" class="name" placeholder="Address">
-                </div>
-                <div class="form-group">
-                    <label for="Name">Message:</label>
-                    <textarea type="text" class="textarea" placeholder="Message"></textarea>
-                </div>
-                <button class="send-button">Send</button>
-
-            </form>
-        </div>
-    </section> -->
 
 
     <!--========================================== Reviews Section HTML ===================================================================== -->
