--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -318,7 +318,7 @@
 
 
     <!--===================  Row 1 HTML ===================== -->
-    <div class="container" ">
+    <div class="container" >
 
                 <h1 class=" centre-size" id="why_choose_us_h">Why choose Us</h1>
 
@@ -363,11 +363,12 @@
                 </div>
             </div>
         </div>
+   </div>
 
 
 
         <!--===================  Row 2 HTML ===================== -->
-
+ <div class="container" >
         <div class="row">
             <div class="col align-self-start">
                 <div class="card text-center" id="why_choose_us_box">
