--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -317,8 +317,7 @@
 
 
 
-    <!--===================  Row 1 HTML ===================== -->
-    <div class="container" >
+       <div class="container" >
 
                 <h1 class=" centre-size" id="why_choose_us_h">Why choose Us</h1>
 
@@ -332,7 +331,7 @@
             <div class="col align-self-start">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <img src="/images/feature_icon1.png" alt="Our Services" class="food-logo">
                         <h5 class="card-title">Learn From The Experts</h5>
                         <p class="card-text">Learning a technology with a professional who is well expertise to solve
                             all of your queries</p>
@@ -344,7 +343,7 @@
             <div class="col align-self-end" id="third_row">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <img src="/images/feature_icon6.png" alt="Our Services" class="food-logo">
                         <h5 class="card-title">Affordable Fees</h5>
                         <p class="card-text">Providing all the courses at an huge disco Providing all the courses at
                             an huge disco</p>
@@ -355,7 +354,7 @@
             <div class="col align-self-center" id="second_row">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <img src="images/feature-icon2.png" alt="Our Services" class="food-logo">
                         <h5 class="card-title">Best Course Materials</h5>
                         <p class="card-text">Course contents are designed by our industry experts with upto date
                             market trending technologies.</p>
@@ -363,17 +362,16 @@
                 </div>
             </div>
         </div>
-   </div>
 
 
 
         <!--===================  Row 2 HTML ===================== -->
- <div class="container" >
+
         <div class="row">
             <div class="col align-self-start">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <img src="/images/feature_icon3.png" alt="Our Services" class="food-logo">
                         <h5 class="card-title">Learn From The Experts</h5>
                         <p class="card-text">Learning a technology with a professional who is well expertise to solve
                             all of your queries</p>
@@ -385,7 +383,7 @@
             <div class="col align-self-end" id="third_row">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <img src="/images/feature_icon4.png" alt="Our Services" class="food-logo">
                         <h5 class="card-title">Affordable Fees</h5>
                         <p class="card-text">Providing all the courses at an huge disco Providing all the courses at
                             an huge disco</p>
@@ -396,7 +394,7 @@
             <div class="col align-self-center" id="second_row">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <img src="images/c_icon.png" alt="Our Services" class="food-logo">
+                        <img src="/images/feature_icon5.png" alt="Our Services" class="food-logo">
                         <h5 class="card-title">Best Course Materials</h5>
                         <p class="card-text">Course contents are designed by our industry experts with upto date
                             market trending technologies.</p>
@@ -406,6 +404,7 @@
         </div>
 
     </div>
+
 
     <!-- =======================Some Highlights HTML ======================= -->
 
