--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -771,22 +771,22 @@
 
                 <h3 class="footer_headings">All Programs</h3>
 
-                <a href="/programs/c.html">
+                <a href="programs/c.html">
                     <p class="footer_text">C Programing Language</p>
                 </a>
-                <a href="/programs/python.html">
+                <a href="programs/python.html">
                     <p class="footer_text">Python Programing Language</p>
                 </a>
-                <a href="/programs/java.html">
+                <a href="programs/java.html">
                     <p class="footer_text">Java Programing Language</p>
                 </a>
-                <a href="/programs/c++.html">
+                <a href="programs/c++.html">
                     <p class="footer_text">C++ Programing Language</p>
                 </a>
-                <a href="/programs/web-development.html">
+                <a href="programs/web-development.html">
                     <p class="footer_text">Wed Development program</p>
                 </a>
-                <a href="/programs/android.html">
+                <a href="programs/android.html">
                     <p class="footer_text">Android Development program</p>
                 </a>
 
