--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -771,23 +771,25 @@
 
                 <h3 class="footer_headings">All Programs</h3>
 
+                
                 <a href="programs/c.html">
-                    <p class="footer_text">C Programing Language</p>
+                    C Programing Language
+                    
                 </a>
                 <a href="programs/python.html">
-                    <p class="footer_text">Python Programing Language</p>
+                    Python Programing Language
                 </a>
                 <a href="programs/java.html">
-                    <p class="footer_text">Java Programing Language</p>
+                   ava Programing Language
                 </a>
                 <a href="programs/c++.html">
-                    <p class="footer_text">C++ Programing Language</p>
+                    C++ Programing Language
                 </a>
                 <a href="programs/web-development.html">
-                    <p class="footer_text">Wed Development program</p>
+                    Wed Development program
                 </a>
                 <a href="programs/android.html">
-                    <p class="footer_text">Android Development program</p>
+                   Android Development program
                 </a>
 
             </div>
