--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -772,23 +772,23 @@
                 <h3 class="footer_headings">All Programs</h3>
 
                 
-                <a href="programs/c.html">
+               <a class="footer_text" href="programs/c.html">
                     C Programing Language
                     
                 </a>
-                <a href="programs/python.html">
+                <a class="footer_text" href="programs/python.html">
                     Python Programing Language
                 </a>
-                <a href="programs/java.html">
-                   ava Programing Language
+                <a class="footer_text" href="programs/java.html">
+                   Java Programing Language
                 </a>
-                <a href="programs/c++.html">
+                <a class="footer_text" href="programs/c++.html">
                     C++ Programing Language
                 </a>
-                <a href="programs/web-development.html">
-                    Wed Development program
+                <a class="footer_text" href="programs/web-development.html">
+                    Web Development program
                 </a>
-                <a href="programs/android.html">
+                <a class="footer_text" href="programs/android.html">
                    Android Development program
                 </a>
 
