--- a/Coding for juniors official/about.html
+++ b/Coding for juniors official/about.html
@@ -579,25 +579,25 @@
 
                 <h3 class="footer_headings">All Programs</h3>
 
-                <a href="/programs/c.html">
-                    <p class="footer_text">C Programing Language</p>
+               <a class="footer_text" href="programs/c.html">
+                    C Programing Language
+                    
                 </a>
-                <a href="/programs/python.html">
-                    <p class="footer_text">Python Programing Language</p>
+                <a class="footer_text" href="programs/python.html">
+                    Python Programing Language
                 </a>
-                <a href="/programs/java.html">
-                    <p class="footer_text">Java Programing Language</p>
+                <a class="footer_text" href="programs/java.html">
+                   Java Programing Language
                 </a>
-                <a href="/programs/c++.html">
-                    <p class="footer_text">C++ Programing Language</p>
+                <a class="footer_text" href="programs/c++.html">
+                    C++ Programing Language
                 </a>
-                <a href="/programs/web-development.html">
-                    <p class="footer_text">Wed Development program</p>
+                <a class="footer_text" href="programs/web-development.html">
+                    Web Development program
                 </a>
-                <a href="/programs/android.html">
-                    <p class="footer_text">Android Development program</p>
+                <a class="footer_text" href="programs/android.html">
+                   Android Development program
                 </a>
-
             </div>
         </div>
 
