--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -657,7 +657,7 @@
         <h2 class="enroll_heading">
             Ready to get your success path started?
         </h2>
-        <a href="/programs.html"> <button type="button" class="btn btn-primary " id="enroll_now_button">Enroll
+        <a href="programs.html"> <button type="button" class="btn btn-primary " id="enroll_now_button">Enroll
                 Now</button> </a>
     </section>
     <hr>
