--- a/Coding for juniors official/programs.html
+++ b/Coding for juniors official/programs.html
@@ -302,7 +302,7 @@
 
     <section class="programs_section" id="services-section">
         <div class="container">
-            <h1 class="centre-size" id="service-h">Our Programs</h1>
+            <h1 class="centre-size" id="programs-h">Our Programs</h1>
             <div class="services">
 
                 <div class="service-box">
